--- a/views/home.pug
+++ b/views/home.pug
@@ -1,23 +1,21 @@
 doctype html
 html
-  head
-    title Video Game Characters
-  body
-    h1 Video Game Characters
-    if characters.length > 0
-      table
-        thead
-          tr
-            th Name
-            th Bio
-            th Ability
-        tbody
-          each character in characters
-            tr
-              td= character.properties.name
-              td= character.properties.bio
-              td= character.properties.ability
-    else
-      p No video game characters found.
-    br
-    a(href='/update-characters') Add a Character
+    head
+        title= `${title}`
+        meta(name="viewport" content="width=device-width, initial-scale=1")
+        link(rel="stylesheet", href="/css/style.css")
+    body
+        h1= `${title}`
+        .container
+            a(href="/update-cobj") Add/Update this table
+            table
+                thead
+                    th Name
+                    th Age
+                    th Breed
+                tbody
+                  each pet in data
+                      tr
+                          td=`${pet.properties.name}`
+                          td=`${pet.properties.age}`
+                          td=`${pet.properties.breed}`
